force-app/main/default/objects/vlocity_ins__CustomFieldMap__c/fields/vlocity_ins__DestinationFieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DestinationFieldName__c</fullName>
    <description>Destination Field Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Destination Field Name</inlineHelpText>
    <label>Destination Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>