force-app/main/default/objects/vlocity_ins__CustomFieldMap__c/fields/vlocity_ins__SourceFieldSObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceFieldSObjectType__c</fullName>
    <description>This field will hold the relational field&apos;s sobject type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will hold the relational field&apos;s sobject type</inlineHelpText>
    <label>Source Field SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>