force-app/main/default/objects/vlocity_ins__CustomFieldMap__c/fields/vlocity_ins__SourceFieldType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceFieldType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>