force-app/main/default/objects/vlocity_ins__CustomFieldMap__c/fields/vlocity_ins__SourceSObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceSObjectType__c</fullName>
    <description>Source SObject Type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Source SObject Type</inlineHelpText>
    <label>Source SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>